# genai-cohort

Lecture-0-Intro-to-AI/Assignment-1/: README.md
Lecture-0-Intro-to-AI/Assignment-2/: tokenizer.py  tokzilla.py
Lecture-0-Intro-to-AI/class-work/: requirements.txt  tokenization.py
Lecture-1-Master-Prompting/Assignment-1/: hitesh-sir-bot.py  requirements.txt  system-prompt.txt
Lecture-1-Master-Prompting/class-work/: chat-1.py  chat-2.py  chat-3-auto.py  chat-3.py  chat-gemini.py  requirements.txt
Lecture-1-Master-Prompting/test/: gemini-chat-auto.py  gemini-chat.py  requirements.txt
Lecture-10-LangGraph(Checkpointing)/: README.md
Lecture-10-LangGraph(Checkpointing)/class-work/: docker-compose.db.yml  pyproject.toml
Lecture-10-LangGraph(Checkpointing)/class-work/app/: graph.py  main.py  pyproject.toml  support.py
Lecture-11-VibeTalker-Project/: README.md
Lecture-11-VibeTalker-Project/class-work/: pyproject.toml
Lecture-12-MCP(Model-Context-Protocol)/mcp-js/: mcp.json  package-lock.json
Lecture-12-MCP/C-drive/: README.md
Lecture-12-MCP/mcp-js/: index.js  mcp.json  (+1 more)
Lecture-13-Capstone-Project/: README.md
Lecture-3-Fine-Tuning-and-discussion/: README.md
Lecture-5-Query-Translation-Patterns(Advance-RAG)/: README.md
Lecture-6-Query-Routing(Advance-RAG)/: README.md
Lecture-7-Knowledge-Graphs(Advance-RAG)/: README.md
Lecture-7-Knowledge-Graphs(Advance-RAG)/Assignment-1/: docker-compose.db.yml  graphDB.excalidraw  ingest.py  main.py  pyproject.toml
Lecture-8-Tracing-AI-Apps/: README.md
Lecture-9-LangGraph(Orchestration-framework)/: README.md
(+23 files in other folders)
